--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-**/Plugins/**/bin/**
-**/Plugins/**/obj/**
-**/ThirdParty/**
+**/Plugins/**/bin/
+**/Plugins/**/obj/
+ThirdParty/
